--- a/src/conways_game_of_war/templates/index.html
+++ b/src/conways_game_of_war/templates/index.html
@@ -29,6 +29,7 @@
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <div class="container">
       <h1>Conway's Game of War</h1>
+      <h2>Player: {{ session['player'] }}</h2>
       <input type="range" id="zoom-level" min="0.5" max="2" step="0.1" value="1" oninput="resizeGameBoard()">
       <div id="game" hx-get="/game_state" hx-trigger="load" hx-swap="outerHTML"></div>
     </div>
